--- a/Main.Rmd
+++ b/Main.Rmd
@@ -105,6 +105,8 @@ samples_output = list()
 paths <- list_cell_seg_files(
   "C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables"
 )
+paths <- "C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/HO105-194_[16067,37856]_cell_seg_data.txt"
+
 paste("There are", length(paths), "different samples currently available.")
 
 samples_output = list()
@@ -120,18 +122,19 @@ plotter_bools = c(plotter_sample, plotter_quadrat, plotter_alltypes)
 r_vec = c(20)
 # r_vec currently does not work well when given NULL see inside spatstat_vectra
 
-selected_options = NULL
+# Characterstring of which option or NULL for all options
+selected_options = list("G")
 
 
-for (samplename_long in paths[5]){
-  print(samplename_long)
-  data = purrr::map_df(samplename_long, read_cell_seg_data, pixels_per_micron = getOption("phenoptr.pixels.per.micron"))
+for (samplename_long in paths[1]){
+
+  data = purrr::map_df(samplename_long, read_cell_seg_data, pixels_per_micron = getOption("phenoptr.pixels.per.micron"), remove_units = FALSE)
   
   samplename = str_remove(samplename_long,"C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/")
   samplename = str_remove(samplename,"_cell_seg_data.txt")
   
   print(samplename)
-  print(fig.prefix.complete)
+  
   output = do_analyse(Intable = data, PhenoOrder = phenotype_simple, ColsOrder = color_simple,
                       XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype',
                       sample_name = samplename, plotter = plotter_bools, fig.prefix = fig.prefix.simple, fig.width = 720, fig.height = 720,
@@ -152,10 +155,9 @@ for (samplename_long in paths[5]){
   MED = output[[7]]
   MAD_min = output[[8]]
   MAD = output[[9]]
-  r_close_list = output[[10]]
-  statistic_close_list = output[[11]]
-  normalized_list = output[[12]]
-  all_types_options_sample_name = output[[13]]
+  statistic_close_list = output[[10]]
+  normalized_list = output[[11]]
+  all_types_options_sample_name = output[[12]]
   
   
   
