--- a/Example.Rmd
+++ b/Example.Rmd
@@ -8,7 +8,6 @@ output:
 
 
 ```{r load_package}
-library(reshape2)
 source('spatstat_vectra.R')
 
 
@@ -24,7 +23,7 @@ phenotype_complete = c("CD163+PDL1-","CD163+PDL1+",
                        "PAX5+PDL1-", "PAX5+PDL1+",
                        "")
 
-color_complete = c("magenta", "brown",
+color_complete = list("magenta", "brown",
                    "red", "blue", "green", "yellow",
                    "gray", "pink",
                    "orange", "cyan",
@@ -61,10 +60,10 @@ extreme = paste0(base_path, c(
 # Plot variables
 
 plotter_sample = FALSE
-plotter_quadrat = TRUE
-plotter_alltypes = TRUE
+plotter_quadrat = FALSE
+plotter_alltypes = FALSE
 
-plotter_bools = c(plotter_sample, plotter_quadrat, plotter_alltypes)
+plotter_bools = list(plotter_sample, plotter_quadrat, plotter_alltypes)
 
 # Select spatial statistics, of NULL then all statistics are selected
 selected_options = NULL
@@ -81,6 +80,8 @@ for (file in extreme){
                       sample_name = samplename, plotter = plotter_bools, fig.prefix = fig.prefix.simple, fig.width = 720, fig.height = 720,
                       r_vec = r_vec, options = selected_options, envelope = TRUE)
 }
+
+M = feature_extract(outputs)
 ```
 
 ```{r extreme_cases, eval=F, outdated}
