--- a/Example.Rmd
+++ b/Example.Rmd
@@ -73,17 +73,13 @@ selected_spatstat_statistics = NULL
 outputs_auto = list()
 for (file in extreme){
 	print(paste('procesing', file))
-    data_auto = purrr::map_df(file, read_cell_seg_data, pixels_per_micron = "auto",remove_units = FALSE)
-	
-	
+    
   	samplename = gsub('_cell_seg_data.txt', '', tail(strsplit(file, '/')[[1]],1))
-	outputs_auto[[samplename]] = do_analyse(Intable = data_auto, PhenoOrder = phenotype_complete, ColsOrder = color_complete,
+	outputs_auto[[samplename]] = do_analyse(segmentation_path = file, PhenoOrder = phenotype_complete, ColsOrder = color_complete,
                       XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype',
                       sample_name = samplename, plotter = plotter_bools, fig.prefix = fig.prefix.complete,
                       r_vec = r_vec, spatstat_statistics = selected_spatstat_statistics)
 }
-
-M_auto = feature_extract(outputs_auto, fig.prefix.complete)
 ```
 
 
@@ -188,17 +184,10 @@ outputs = list()
 for (file in pathcombi){
 	print(paste('procesing', file))
     
-	data = purrr::map_df(file, read_cell_seg_data, pixels_per_micron = 'auto', remove_units = FALSE)
-    
   	samplename = gsub('_cell_seg_data.txt', '', tail(strsplit(file, '/')[[1]],1))
-	outputs[[samplename]] = do_analyse(Intable = data, PhenoOrder = phenotype_simple, ColsOrder = color_simple,
+	outputs[[samplename]] = do_analyse(segmentation_path = file, PhenoOrder = phenotype_simple, ColsOrder = color_simple,
                       XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype',
                       sample_name = samplename, plotter = plotter_bools, fig.prefix = fig.prefix.simple,
                       r_vec = r_vec, spatstat_statistics = selected_spatstat_statistics)
 }
-
-
-
-M = feature_extract(outputs, fig.prefix.simple)
-
 ```
